--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "aplikasi-profile",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,6 @@
   },
   "homepage": "https://github.com/anigato/aplikasi-profile#readme",
   "dependencies": {
-    "@hapi/hapi": "^21.3.2",
-    "@hapi/inert": "^7.1.0"
+    "express": "^4.16.4"
   }
 }
